--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     cordaCompile "org.apache.logging.log4j:log4j-web:${log4j_version}"
     cordaCompile "org.slf4j:jul-to-slf4j:$slf4j_version"
     cordaDriver "net.corda:corda-shell:4.9"
+    implementation group: 'com.opencsv', name: 'opencsv', version: '5.7'
 
 }
 
